Fix implict values

--- a/hrc/test/valid/yaml-d-yaml-spec/spec-05-15-0.yaml.html
+++ b/hrc/test/valid/yaml-d-yaml-spec/spec-05-15-0.yaml.html
@@ -7,8 +7,8 @@
  6: <span class='yaml-Comment def-Comment def-Syntax'># error = While scanning a double quoted scalar, found unsupported escape character c\n</span>
  7: 
  8: <span class='yaml-MappingKey def-Parameter'>Bad escapes</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span>
- 9:   <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>\c</span>
-10: <span class='yaml-String def-String'>  \xq-</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
+ 9:   <span class='yaml-String def-String'>"\c</span>
+10:   <span class='yaml-String def-String'>\xq-"</span>
 11: 
 12: <span class='yaml-Comment def-Comment def-Syntax'># null</span>
 13: 
