--- a/hrc/test/valid/yaml-yaml-test-suite/U3XV-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/U3XV-0.yaml.html
@@ -2,21 +2,21 @@
  1: 
  2: <span class='yaml-DocumentEdge def-Keyword'>---</span>
  3: <span class='yaml-MappingKey def-Parameter'>top1</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>node1</span>
- 4:   <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>k1 </span><span class='yaml-String def-String'>key1: one</span>
+ 4:   <span class='yaml-String def-String'>&amp;k1 key1: one</span>
  5: <span class='yaml-MappingKey def-Parameter'>top2</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>node2 </span><span class='yaml-Comment def-Comment def-Syntax'># comment</span>
  6:   <span class='yaml-MappingKey def-Parameter'>key2</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-String def-String'>two</span>
  7: <span class='yaml-MappingKey def-Parameter'>top3</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span>
- 8:   <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>k3 </span><span class='yaml-String def-String'>key3: three</span>
+ 8:   <span class='yaml-String def-String'>&amp;k3 key3: three</span>
  9: <span class='yaml-MappingKey def-Parameter'>top4</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span>
-10:   <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>node4</span>
-11:   <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>k4 </span><span class='yaml-String def-String'>key4: four</span>
+10:   <span class='yaml-String def-String'>&amp;node4</span>
+11:   <span class='yaml-String def-String'>&amp;k4 key4: four</span>
 12: <span class='yaml-MappingKey def-Parameter'>top5</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span>
-13:   <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>node5</span>
+13:   <span class='yaml-String def-String'>&amp;node5</span>
 14:   <span class='yaml-MappingKey def-Parameter'>key5</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-String def-String'>five</span>
 15: <span class='yaml-MappingKey def-Parameter'>top6</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>val6</span>
 16:   <span class='yaml-String def-String'>six</span>
 17: <span class='yaml-MappingKey def-Parameter'>top7</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span>
-18:   <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>val7 </span><span class='yaml-String def-String'>seven</span>
+18:   <span class='yaml-String def-String'>&amp;val7 seven</span>
 19: 
 20: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
 21: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC ---</span>
