--- a/hrc/test/valid/yaml-yaml-test-suite/XW4D-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/XW4D-0.yaml.html
@@ -12,7 +12,7 @@
 11:  <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-Comment def-Comment def-Syntax'>#lala</span>
 12:   <span class='yaml-String def-String'>seq2</span>
 13: <span class='yaml-MappingKey def-Parameter'>e</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span>
-14:  <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>node </span><span class='yaml-Comment def-Comment def-Syntax'># lala</span>
+14:  <span class='yaml-String def-String'>&amp;node </span><span class='yaml-Comment def-Comment def-Syntax'># lala</span>
 15:  <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-MappingKey def-Parameter'>x</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-String def-String'>y</span>
 16: <span class='yaml-MappingKey def-Parameter'>block</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-BlockScalar def-InterfaceKeyword def-Keyword'>></span> <span class='yaml-Comment def-Comment def-Syntax'># lala</span>
 17:   <span class='yaml-String def-String'>abcde</span>
