--- a/hrc/test/valid/yaml/misc4.yaml.html
+++ b/hrc/test/valid/yaml/misc4.yaml.html
@@ -56,5 +56,5 @@
 55: <span class='yaml-SymbolMappingComplexKey def-Keyword'>:</span> <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='def-Date'>2001-07-23</span>
 56: 
 57:   <span class='yaml-MappingKey def-Parameter'>foo</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span>
-58:       <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>no error here</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
+58:       <span class='yaml-String def-String'>"no error here"</span>
 59: 
