--- a/hrc/test/valid/yaml/misc5.yaml.html
+++ b/hrc/test/valid/yaml/misc5.yaml.html
@@ -63,7 +63,7 @@
 62:   <span class='yaml-SymbolMappingComplexKey def-Keyword'>:</span> <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>2001-07-23</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
 63: 
 64:   <span class='yaml-MappingKey def-Parameter'>foo</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span>
-65:       <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>bar</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
+65:       <span class='yaml-String def-String'>"bar"</span>
 66: 
 67: <span class='yaml-Comment def-Comment def-Syntax'># errors</span>
 68: 
@@ -72,7 +72,7 @@
 71:      <span class='yaml-Error def-Error'>not: error</span>
 72:    <span class='yaml-Error def-Error'>error:</span>
 73:   <span class='yaml-MappingKey def-Parameter'>foo</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span>
-74:       <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>bar</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
+74:       <span class='yaml-String def-String'>"bar"</span>
 75:       <span class='yaml-MappingKey def-Parameter'>error here</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>ettete</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
 76:           <span class='yaml-Error def-Error'>kdjfksjdflskdjf</span>
 77:           <span class='yaml-Error def-Error'>sldkfjsldkjf</span>
