--- a/hrc/test/valid/yaml-d-yaml-spec/spec-08-08-0.yaml.html
+++ b/hrc/test/valid/yaml-d-yaml-spec/spec-08-08-0.yaml.html
@@ -2,8 +2,8 @@
  1: 
  2: <span class='yaml-DocumentEdge def-Keyword'>---</span>
  3: <span class='yaml-MappingKey def-Parameter'>foo</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span>
- 4:  <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>bar</span>
- 5: <span class='yaml-String def-String'> baz</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
+ 4:  <span class='yaml-String def-String'>"bar</span>
+ 5:  <span class='yaml-String def-String'>baz"</span>
  6: <span class='yaml-DocumentEdge def-Keyword'>---</span>
  7: <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>foo</span>
  8: <span class='yaml-String def-String'> bar</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
