--- a/hrc/test/valid/yaml-d-yaml/construct-2.yaml.html
+++ b/hrc/test/valid/yaml-d-yaml/construct-2.yaml.html
@@ -7,7 +7,7 @@
  6:   <span class='yaml-StringEdge def-StringEdge def-String'>'</span><span class='yaml-MappingKey def-Parameter'>y</span><span class='yaml-StringEdge def-StringEdge def-String'>'</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span><span class='yaml-MappingKey def-Parameter'> </span><span class='def-NumberDec def-Number'>2</span>
  7:   <span class='yaml-MappingKey def-Parameter'>z</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='def-NumberDec def-Number'>3</span>
  8: <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-Tag def-OpenTag def-Tag'>tag2</span>
- 9:   <span class='def-NumberDec def-Number'>10</span>
+ 9:   <span class='yaml-String def-String'>10</span>
 10: 
 11: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
 12: <span class='yaml-Comment def-Comment def-Syntax'># +DOC ---</span>
