--- a/hrc/test/valid/yaml-yaml-test-suite/26DV-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/26DV-0.yaml.html
@@ -5,7 +5,7 @@
  4: <span class='yaml-StringEdge def-StringEdge def-String'>'</span><span class='yaml-MappingKey def-Parameter'>top2</span><span class='yaml-StringEdge def-StringEdge def-String'>'</span><span class='yaml-MappingKey def-Parameter'> </span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span><span class='yaml-String def-String'>␣</span>
  5:   <span class='yaml-StringEdge def-StringEdge def-String'>'</span><span class='yaml-MappingKey def-Parameter'>key2</span><span class='yaml-StringEdge def-StringEdge def-String'>'</span><span class='yaml-MappingKey def-Parameter'> </span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span><span class='yaml-MappingKey def-Parameter'> </span><span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>alias2 </span><span class='yaml-String def-String'>scalar2</span>
  6: <span class='yaml-MappingKey def-Parameter'>top3</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>node3␣</span>
- 7:   <span class='yaml-SymbolAnchor def-VarStrong def-Var'>*</span><span class='yaml-Anchor def-Var'>alias1 </span><span class='yaml-Error def-Error'>: scalar3</span>
+ 7:   <span class='yaml-String def-String'>*alias1 : scalar3</span>
  8: <span class='yaml-String def-String'>top4:␣</span>
  9:   <span class='yaml-SymbolAnchor def-VarStrong def-Var'>*</span><span class='yaml-Anchor def-Var'>alias2 </span><span class='yaml-Error def-Error'>: scalar4</span>
 10: <span class='yaml-String def-String'>top5   :␣␣␣␣</span>
