--- a/hrc/test/valid/yaml-yaml-test-suite/2SXE-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/2SXE-0.yaml.html
@@ -2,7 +2,7 @@
  1: 
  2: <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>a: </span><span class='yaml-String def-String'>key: &amp;a value</span>
  3: <span class='yaml-MappingKey def-Parameter'>foo</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span>
- 4:   <span class='yaml-SymbolAnchor def-VarStrong def-Var'>*</span><span class='yaml-Anchor def-Var'>a:</span>
+ 4:   <span class='yaml-String def-String'>*a:</span>
  5: 
  6: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
  7: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC</span>
