--- a/hrc/test/valid/yaml-yaml-test-suite/4JVG-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/4JVG-0.yaml.html
@@ -2,9 +2,9 @@
  1: <span class='yaml-Comment def-Comment def-Syntax'># fail = true</span>
  2: 
  3: <span class='yaml-MappingKey def-Parameter'>top1</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>node1</span>
- 4:   <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>k1 </span><span class='yaml-String def-String'>key1: val1</span>
+ 4:   <span class='yaml-String def-String'>&amp;k1 key1: val1</span>
  5: <span class='yaml-MappingKey def-Parameter'>top2</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>node2</span>
- 6:   <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>v2 </span><span class='yaml-String def-String'>val2</span>
+ 6:   <span class='yaml-String def-String'>&amp;v2 val2</span>
  7: 
  8: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
  9: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC</span>
