--- a/hrc/test/valid/yaml-yaml-test-suite/BU8L-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/BU8L-0.yaml.html
@@ -1,7 +1,7 @@
 ﻿ 0: <span class='yaml-Comment def-Comment def-Syntax'># name = Node Anchor and Tag on Seperate Lines</span>
  1: 
  2: <span class='yaml-MappingKey def-Parameter'>key</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>anchor</span>
- 3:  <span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-Tag def-OpenTag def-Tag'>map</span>
+ 3:  <span class='yaml-String def-String'>!!map</span>
  4:   <span class='yaml-MappingKey def-Parameter'>a</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-String def-String'>b</span>
  5: 
  6: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
