--- a/hrc/test/valid/yaml-yaml-test-suite/FBC9-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/FBC9-0.yaml.html
@@ -1,7 +1,7 @@
 ﻿ 0: <span class='yaml-Comment def-Comment def-Syntax'># name = Allowed characters in plain scalars</span>
  1: 
  2: <span class='yaml-MappingKey def-Parameter'>safe</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-String def-String'>a!"#$%&amp;'()*+,-./09:;&lt;=>?@AZ[\]^_`az{|}~</span>
- 3:      <span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-Tag def-OpenTag def-Tag'>"#$%&amp;'()*+,-./09:;&lt;=>?@AZ[\]^_`az{|}~</span>
+ 3:      <span class='yaml-String def-String'>!"#$%&amp;'()*+,-./09:;&lt;=>?@AZ[\]^_`az{|}~</span>
  4: <span class='yaml-MappingKey def-Parameter'>safe question mark</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-String def-String'>?foo</span>
  5: <span class='yaml-MappingKey def-Parameter'>safe colon</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-String def-String'>:foo</span>
  6: <span class='yaml-MappingKey def-Parameter'>safe dash</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-String def-String'>-foo</span>
