--- a/hrc/test/valid/yaml-yaml-test-suite/FH7J-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/FH7J-0.yaml.html
@@ -2,7 +2,7 @@
  1: 
  2: <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-Tag def-OpenTag def-Tag'>str</span>
  3: <span class='yaml-SymbolSequence def-Symbol'>-</span>
- 4:   <span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-Tag def-OpenTag def-Tag'>null </span><span class='yaml-Error def-Error'>: a</span>
+ 4:   <span class='yaml-String def-String'>!!null : a</span>
  5:   <span class='yaml-MappingKey def-Parameter'>b</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-Tag def-OpenTag def-Tag'>str</span>
  6: <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-Tag def-OpenTag def-Tag'>str </span><span class='yaml-Error def-Error'>: !!null</span>
  7: 
