--- a/hrc/test/valid/yaml-yaml-test-suite/JTV5-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/JTV5-0.yaml.html
@@ -1,11 +1,11 @@
 ﻿ 0: <span class='yaml-Comment def-Comment def-Syntax'># name = Block Mapping with Multiline Scalars</span>
  1: 
  2: <span class='yaml-SymbolMappingComplexKey def-Keyword'>?</span> <span class='yaml-String def-String'>a</span>
- 3:   <span class='yaml-BooleanConstant def-BooleanConstant def-Constant def-Keyword'>true</span>
+ 3:   <span class='yaml-String def-String'>true</span>
  4: <span class='yaml-SymbolMappingComplexKey def-Keyword'>:</span> <span class='yaml-Constant def-Constant def-Keyword'>null</span>
  5:   <span class='yaml-String def-String'>d</span>
  6: <span class='yaml-SymbolMappingComplexKey def-Keyword'>?</span> <span class='yaml-String def-String'>e</span>
- 7:   <span class='def-NumberDec def-Number'>42</span>
+ 7:   <span class='yaml-String def-String'>42</span>
  8: 
  9: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
 10: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC</span>
