--- a/hrc/test/valid/yaml-yaml-test-suite/M5C3-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/M5C3-0.yaml.html
@@ -3,8 +3,8 @@
  2: <span class='yaml-MappingKey def-Parameter'>literal</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-BlockScalar def-InterfaceKeyword def-Keyword'>|</span><span class='yaml-BlockScalarIndent def-Prefix'>2</span>
  3:   <span class='yaml-String def-String'>value</span>
  4: <span class='yaml-MappingKey def-Parameter'>folded</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span>
- 5:    <span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-Tag def-OpenTag def-Tag'>foo</span>
- 6:   <span class='yaml-BlockScalar def-InterfaceKeyword def-Keyword'>></span><span class='yaml-BlockScalarIndent def-Prefix'>1</span>
+ 5:    <span class='yaml-String def-String'>!foo</span>
+ 6:   <span class='yaml-String def-String'>>1</span>
  7:  <span class='yaml-String def-String'>value</span>
  8: 
  9: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
