--- a/hrc/test/valid/yaml-yaml-test-suite/PW8X-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/PW8X-0.yaml.html
@@ -3,10 +3,10 @@
  2: <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>a</span>
  3: <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-String def-String'>a</span>
  4: <span class='yaml-SymbolSequence def-Symbol'>-</span>
- 5:   <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>a </span><span class='yaml-Error def-Error'>: a</span>
+ 5:   <span class='yaml-String def-String'>&amp;a : a</span>
  6:   <span class='yaml-MappingKey def-Parameter'>b</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>b</span>
  7: <span class='yaml-SymbolSequence def-Symbol'>-</span>
- 8:   <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>c </span><span class='yaml-Error def-Error'>: &amp;a</span>
+ 8:   <span class='yaml-String def-String'>&amp;c : &amp;a</span>
  9: <span class='yaml-SymbolSequence def-Symbol'>-</span>
 10:   <span class='yaml-SymbolMappingComplexKey def-Keyword'>?</span> <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>d</span>
 11: <span class='yaml-SymbolSequence def-Symbol'>-</span>
