--- a/hrc/test/valid/yaml-yaml-test-suite/Q9WF-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/Q9WF-0.yaml.html
@@ -3,9 +3,9 @@
  2: <span class='yaml-SymbolFlow def-SymbolStrong def-Symbol'>{</span> <span class='yaml-MappingKey def-Parameter'>first</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span> <span class='yaml-String def-String'>Sammy</span><span class='yaml-Symbol def-Symbol'>, </span><span class='yaml-MappingKey def-Parameter'>last</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span> <span class='yaml-String def-String'>Sosa </span><span class='yaml-SymbolFlow def-SymbolStrong def-Symbol'>}</span><span class='yaml-Error def-Error'>:</span>
  3: <span class='yaml-Comment def-Comment def-Syntax'># Statistics:</span>
  4:   <span class='yaml-MappingKey def-Parameter'>hr</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:  </span><span class='yaml-Comment def-Comment def-Syntax'># Home runs</span>
- 5:      <span class='def-NumberDec def-Number'>65</span>
+ 5:      <span class='yaml-String def-String'>65</span>
  6:   <span class='yaml-MappingKey def-Parameter'>avg</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-Comment def-Comment def-Syntax'># Average</span>
- 7:    <span class='def-NumberFloat def-Number'>0.278</span>
+ 7:    <span class='yaml-String def-String'>0.278</span>
  8: 
  9: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
 10: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC</span>
