--- a/hrc/test/valid/yaml-yaml-test-suite/SKE5-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/SKE5-0.yaml.html
@@ -2,7 +2,7 @@
  1: 
  2: <span class='yaml-DocumentEdge def-Keyword'>---</span>
  3: <span class='yaml-MappingKey def-Parameter'>seq</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span>
- 4:  <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>anchor</span>
+ 4:  <span class='yaml-String def-String'>&amp;anchor</span>
  5: <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-String def-String'>a</span>
  6: <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-String def-String'>b</span>
  7: 
