--- a/hrc/test/valid/yaml-yaml-test-suite/XV9V-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/XV9V-0.yaml.html
@@ -1,9 +1,9 @@
 ﻿ 0: <span class='yaml-Comment def-Comment def-Syntax'># name = Spec Example 6.5. Empty Lines [1.3]</span>
  1: 
  2: <span class='yaml-MappingKey def-Parameter'>Folding</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span>
- 3:   <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>Empty line</span>
- 4: <span class='yaml-String def-String'></span>
- 5: <span class='yaml-String def-String'>  as a line feed</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
+ 3:   <span class='yaml-String def-String'>"Empty line</span>
+ 4: 
+ 5:   <span class='yaml-String def-String'>as a line feed"</span>
  6: <span class='yaml-MappingKey def-Parameter'>Chomping</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-BlockScalar def-InterfaceKeyword def-Keyword'>|</span>
  7:   <span class='yaml-String def-String'>Clipped empty lines</span>
  8: <span class='yaml-String def-String'>␣</span>
