Support anchors/aliases for mapping keys

--- a/hrc/test/valid/yaml-d-yaml/invalid-0.yaml.html
+++ b/hrc/test/valid/yaml-d-yaml/invalid-0.yaml.html
@@ -11,7 +11,7 @@
 10:     <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>correct </span><span class='yaml-String def-String'>foo</span><span class='yaml-Symbol def-Symbol'>,</span>
 11:     <span class='yaml-SymbolAnchor def-VarStrong def-Var'>*</span><span class='yaml-Anchor def-Var'>correct</span><span class='yaml-Symbol def-Symbol'>,</span>
 12:     <span class='yaml-SymbolAnchor def-VarStrong def-Var'>*</span><span class='yaml-Anchor def-Var'>correct</span><span class='yaml-SymbolFlow def-SymbolStrong def-Symbol'>]</span>   <span class='yaml-Comment def-Comment def-Syntax'># still correct</span>
-13: <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-SymbolAnchor def-VarStrong def-Var'>*</span><span class='yaml-Anchor def-Var'>correct: </span><span class='yaml-Error def-Error'>still correct</span>
+13: <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-SymbolAnchor def-VarStrong def-Var'>*</span><span class='yaml-Anchor def-Var'>correct</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='yaml-String def-String'>still correct</span>
 14: <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>correct-or-not[foo, </span><span class='yaml-String def-String'>bar]</span>
 15: 
 16: 
