--- a/hrc/test/valid/yaml-yaml-test-suite/ZWK4-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/ZWK4-0.yaml.html
@@ -3,7 +3,7 @@
  2: <span class='yaml-DocumentEdge def-Keyword'>---</span>
  3: <span class='yaml-MappingKey def-Parameter'>a</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='def-NumberDec def-Number'>1</span>
  4: <span class='yaml-SymbolMappingComplexKey def-Keyword'>?</span> <span class='yaml-String def-String'>b</span>
- 5: <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>anchor </span><span class='yaml-String def-String'>c: 3</span>
+ 5: <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>anchor</span><span class='yaml-MappingKey def-Parameter'> c</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>: </span><span class='def-NumberDec def-Number'>3</span>
  6: 
  7: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
  8: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC ---</span>
