Mark incorrect escapes as an error

--- a/hrc/test/valid/yaml-yaml-test-suite/HRE5-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/HRE5-0.yaml.html
@@ -2,7 +2,7 @@
  1: <span class='yaml-Comment def-Comment def-Syntax'># fail = true</span>
  2: 
  3: <span class='yaml-DocumentEdge def-Keyword'>---</span>
- 4: <span class='yaml-MappingKey def-Parameter'>double</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span> <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>quoted \' scalar</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
+ 4: <span class='yaml-MappingKey def-Parameter'>double</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span> <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>quoted </span><span class='yaml-Error def-Error'>\'</span><span class='yaml-String def-String'> scalar</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
  5: 
  6: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
  7: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC ---</span>
