--- a/hrc/test/valid/yaml-yaml-test-suite/KH5V-1.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/KH5V-1.yaml.html
@@ -1,6 +1,6 @@
 ﻿ 0: <span class='yaml-Comment def-Comment def-Syntax'># name = Inline tabs in double quoted</span>
  1: 
- 2: <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>2 inline\——»tab</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
+ 2: <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>2 inline</span><span class='yaml-Error def-Error'>\—</span><span class='yaml-String def-String'>—»tab</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
  3: 
  4: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
  5: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC</span>
