--- a/hrc/test/valid/yaml-d-yaml/invalid-10.yaml.html
+++ b/hrc/test/valid/yaml-d-yaml/invalid-10.yaml.html
@@ -6,7 +6,7 @@
  5: <span class='yaml-Comment def-Comment def-Syntax'># mark2.column = 1</span>
  6: <span class='yaml-Comment def-Comment def-Syntax'># error = While parsing a block sequence, expected block end, but found: scalar</span>
  7: 
- 8: <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>some escape characters are </span><span class='yaml-StringContent def-StringContent def-String'>\n</span><span class='yaml-String def-String'>correct, but this one \?</span><span class='yaml-StringContent def-StringContent def-String'>\n</span><span class='yaml-String def-String'>is not</span><span class='yaml-StringContent def-StringContent def-String'>\n</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
+ 8: <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>some escape characters are </span><span class='yaml-StringContent def-StringContent def-String'>\n</span><span class='yaml-String def-String'>correct, but this one </span><span class='yaml-Error def-Error'>\?</span><span class='yaml-StringContent def-StringContent def-String'>\n</span><span class='yaml-String def-String'>is not</span><span class='yaml-StringContent def-StringContent def-String'>\n</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
  9: 
 10: <span class='yaml-Comment def-Comment def-Syntax'># null</span>
 11: 
