--- a/hrc/test/valid/yaml-d-yaml/invalid-12.yaml.html
+++ b/hrc/test/valid/yaml-d-yaml/invalid-12.yaml.html
@@ -6,7 +6,7 @@
  5: <span class='yaml-Comment def-Comment def-Syntax'># mark2.column = 1</span>
  6: <span class='yaml-Comment def-Comment def-Syntax'># error = While parsing a block sequence, expected block end, but found: scalar</span>
  7: 
- 8: <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>hm.... \u123?</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
+ 8: <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>hm.... </span><span class='yaml-Error def-Error'>\u</span><span class='yaml-String def-String'>123?</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
  9: 
 10: <span class='yaml-Comment def-Comment def-Syntax'># null</span>
 11: 
