--- a/hrc/test/valid/yaml-yaml-test-suite/3RLN-1.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/3RLN-1.yaml.html
@@ -1,7 +1,7 @@
 ﻿ 0: <span class='yaml-Comment def-Comment def-Syntax'># name = Leading tabs in double quoted</span>
  1: 
  2: <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>2 leading</span>
- 3: <span class='yaml-String def-String'>    \———»tab</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
+ 3: <span class='yaml-String def-String'>    </span><span class='yaml-Error def-Error'>\—</span><span class='yaml-String def-String'>——»tab</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
  4: 
  5: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
  6: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC</span>
