--- a/hrc/test/valid/yaml-yaml-test-suite/DE56-2.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/DE56-2.yaml.html
@@ -1,6 +1,6 @@
 ﻿ 0: <span class='yaml-Comment def-Comment def-Syntax'># name = Trailing tabs in double quoted</span>
  1: 
- 2: <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>3 trailing\————»</span>
+ 2: <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>3 trailing</span><span class='yaml-Error def-Error'>\—</span><span class='yaml-String def-String'>———»</span>
  3: <span class='yaml-String def-String'>    tab</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
  4: 
  5: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
