Allow hashes (#) in mapping key names

--- a/hrc/test/valid/yaml-yaml-test-suite/2EBW-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/2EBW-0.yaml.html
@@ -1,10 +1,10 @@
 ﻿ 0: <span class='yaml-Comment def-Comment def-Syntax'># name = Allowed characters in keys</span>
  1: 
- 2: <span class='yaml-String def-String'>a!"#$%&amp;'()*+,-./09:;&lt;=>?@AZ[\]^_`az{|}~: safe</span>
+ 2: <span class='yaml-MappingKey def-Parameter'>a!"#$%&amp;'()*+,-./09:;&lt;=>?@AZ[\]^_`az{|}~</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span> <span class='yaml-String def-String'>safe</span>
  3: <span class='yaml-MappingKey def-Parameter'>?foo</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span> <span class='yaml-String def-String'>safe question mark</span>
  4: <span class='yaml-MappingKey def-Parameter'>:foo</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span> <span class='yaml-String def-String'>safe colon</span>
  5: <span class='yaml-MappingKey def-Parameter'>-foo</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span> <span class='yaml-String def-String'>safe dash</span>
- 6: <span class='yaml-String def-String'>this is#not: a comment</span>
+ 6: <span class='yaml-MappingKey def-Parameter'>this is#not</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span> <span class='yaml-String def-String'>a comment</span>
  7: 
  8: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
  9: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC</span>
