Allow document-end without document-start

--- a/hrc/test/valid/yaml-d-yaml-spec/spec-08-08-0.yaml.html
+++ b/hrc/test/valid/yaml-d-yaml-spec/spec-08-08-0.yaml.html
@@ -12,7 +12,7 @@
 11:  <span class='yaml-String def-String'>bar</span>
 12: <span class='yaml-DocumentEdge def-Keyword'>---</span> <span class='yaml-BlockScalar def-InterfaceKeyword def-Keyword'>|</span>
 13:  <span class='yaml-String def-String'>foo</span>
-14: <span class='yaml-String def-String'>...</span>
+14: <span class='yaml-DocumentEdge def-Keyword'>...</span>
 15: 
 16: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
 17: <span class='yaml-Comment def-Comment def-Syntax'>#   +DOC ---</span>
