--- a/hrc/test/valid/yaml-d-yaml-spec/spec-07-09-0.yaml.html
+++ b/hrc/test/valid/yaml-d-yaml-spec/spec-07-09-0.yaml.html
@@ -4,7 +4,7 @@
  3: <span class='yaml-String def-String'>foo</span>
  4: <span class='yaml-DocumentEdge def-Keyword'>...</span>
  5: <span class='yaml-Comment def-Comment def-Syntax'># Repeated end marker.</span>
- 6: <span class='yaml-String def-String'>...</span>
+ 6: <span class='yaml-DocumentEdge def-Keyword'>...</span>
  7: <span class='yaml-DocumentEdge def-Keyword'>---</span>
  8: <span class='yaml-String def-String'>bar</span>
  9: <span class='yaml-Comment def-Comment def-Syntax'># No end marker.</span>
