--- a/hrc/test/valid/yaml-yaml-test-suite/753E-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/753E-0.yaml.html
@@ -4,7 +4,7 @@
  3:  <span class='yaml-String def-String'>ab</span>
  4: <span class='yaml-String def-String'>␣</span>
  5: <span class='yaml-String def-String'>␣</span>
- 6: <span class='yaml-String def-String'>...</span>
+ 6: <span class='yaml-DocumentEdge def-Keyword'>...</span>
  7: 
  8: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
  9: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC ---</span>
