--- a/hrc/test/valid/yaml-yaml-test-suite/B63P-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/B63P-0.yaml.html
@@ -2,7 +2,7 @@
 1: <span class='yaml-Comment def-Comment def-Syntax'># fail = true</span>
 2: 
 3: <span class='def-ClassKeyword def-Keyword'>%YAML</span> <span class='def-NumberDec def-Number'>1.2</span>
-4: <span class='yaml-String def-String'>...</span>
+4: <span class='yaml-DocumentEdge def-Keyword'>...</span>
 5: 
 6: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
 7: 
