--- a/hrc/test/valid/yaml-yaml-test-suite/HWV9-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/HWV9-0.yaml.html
@@ -1,6 +1,6 @@
 ﻿0: <span class='yaml-Comment def-Comment def-Syntax'># name = Document-end marker</span>
 1: 
-2: <span class='yaml-String def-String'>...</span>
+2: <span class='yaml-DocumentEdge def-Keyword'>...</span>
 3: 
 4: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
 5: <span class='yaml-Comment def-Comment def-Syntax'># -STR</span>
