--- a/hrc/test/valid/yaml-yaml-test-suite/M29M-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/M29M-0.yaml.html
@@ -7,7 +7,7 @@
  6:  <span class='yaml-String def-String'>ef</span>
  7: <span class='yaml-String def-String'>␣</span>
  8: 
- 9: <span class='yaml-String def-String'>...</span>
+ 9: <span class='yaml-DocumentEdge def-Keyword'>...</span>
 10: 
 11: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
 12: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC</span>
