--- a/hrc/test/valid/yaml-yaml-test-suite/M7A3-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/M7A3-0.yaml.html
@@ -2,9 +2,9 @@
  1: 
  2: <span class='yaml-String def-String'>Bare</span>
  3: <span class='yaml-String def-String'>document</span>
- 4: <span class='yaml-String def-String'>...</span>
+ 4: <span class='yaml-DocumentEdge def-Keyword'>...</span>
  5: <span class='yaml-Comment def-Comment def-Syntax'># No document</span>
- 6: <span class='yaml-String def-String'>...</span>
+ 6: <span class='yaml-DocumentEdge def-Keyword'>...</span>
  7: <span class='yaml-BlockScalar def-InterfaceKeyword def-Keyword'>|</span>
  8: <span class='yaml-Error def-Error'>%!PS-Adobe-2.0 # Not the first line</span>
  9: 
