--- a/hrc/test/valid/yaml-yaml-test-suite/S4T7-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/S4T7-0.yaml.html
@@ -1,7 +1,7 @@
 ﻿ 0: <span class='yaml-Comment def-Comment def-Syntax'># name = Document with footer</span>
  1: 
  2: <span class='yaml-MappingKey def-Parameter'>aaa</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span> <span class='yaml-String def-String'>bbb</span>
- 3: <span class='yaml-String def-String'>...</span>
+ 3: <span class='yaml-DocumentEdge def-Keyword'>...</span>
  4: 
  5: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
  6: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC</span>
