--- a/hrc/test/valid/yaml-yaml-test-suite/W4TN-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/W4TN-0.yaml.html
@@ -3,7 +3,7 @@
  2: <span class='def-ClassKeyword def-Keyword'>%YAML</span> <span class='def-NumberDec def-Number'>1.2</span>
  3: <span class='yaml-DocumentEdge def-Keyword'>---</span> <span class='yaml-BlockScalar def-InterfaceKeyword def-Keyword'>|</span>
  4: <span class='yaml-Error def-Error'>%!PS-Adobe-2.0</span>
- 5: <span class='yaml-String def-String'>...</span>
+ 5: <span class='yaml-DocumentEdge def-Keyword'>...</span>
  6: <span class='def-ClassKeyword def-Keyword'>%YAML</span> <span class='def-NumberDec def-Number'>1.2</span>
  7: <span class='yaml-DocumentEdge def-Keyword'>---</span>
  8: <span class='yaml-Comment def-Comment def-Syntax'># Empty</span>
