Allow comments in flow-style

--- a/hrc/test/valid/yaml-yaml-test-suite/K3WX-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/K3WX-0.yaml.html
@@ -1,7 +1,7 @@
 ﻿ 0: <span class='yaml-Comment def-Comment def-Syntax'># name = Colon and adjacent value after comment on next line</span>
  1: 
  2: <span class='yaml-DocumentEdge def-Keyword'>---</span>
- 3: <span class='yaml-SymbolFlow def-SymbolStrong def-Symbol'>{</span> <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-MappingKey def-Parameter'>foo</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-MappingKey def-Parameter'> </span><span class='yaml-Error def-Error'># comment</span>
+ 3: <span class='yaml-SymbolFlow def-SymbolStrong def-Symbol'>{</span> <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-MappingKey def-Parameter'>foo</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-MappingKey def-Parameter'> </span><span class='yaml-Comment def-Comment def-Syntax'># comment</span>
  4:   <span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span><span class='yaml-String def-String'>bar </span><span class='yaml-SymbolFlow def-SymbolStrong def-Symbol'>}</span>
  5: 
  6: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
