Allow tag after anchor

--- a/hrc/test/valid/yaml-d-yaml-spec/spec-09-30-0.yaml.html
+++ b/hrc/test/valid/yaml-d-yaml-spec/spec-09-30-0.yaml.html
@@ -7,8 +7,8 @@
  6:  <span class='yaml-String def-String'>next</span>
  7:  <span class='yaml-String def-String'>line</span>
  8: 
- 9:    <span class='yaml-Error def-Error'>* bullet</span>
-10:    <span class='yaml-Error def-Error'>* list</span>
+ 9:    <span class='yaml-Error def-Error'>*</span> <span class='yaml-String def-String'>bullet</span>
+10:    <span class='yaml-Error def-Error'>*</span> <span class='yaml-String def-String'>list</span>
 11: 
 12:  <span class='yaml-String def-String'>last</span>
 13:  <span class='yaml-String def-String'>line</span>
