--- a/hrc/test/valid/yaml-yaml-test-suite/7T8X-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/7T8X-0.yaml.html
@@ -7,10 +7,10 @@
  6: 
  7:  <span class='yaml-String def-String'>next</span>
  8:  <span class='yaml-String def-String'>line</span>
- 9:    <span class='yaml-Error def-Error'>* bullet</span>
+ 9:    <span class='yaml-Error def-Error'>*</span> <span class='yaml-String def-String'>bullet</span>
 10: 
-11:    <span class='yaml-Error def-Error'>* list</span>
-12:    <span class='yaml-Error def-Error'>* lines</span>
+11:    <span class='yaml-Error def-Error'>*</span> <span class='yaml-String def-String'>list</span>
+12:    <span class='yaml-Error def-Error'>*</span> <span class='yaml-String def-String'>lines</span>
 13: 
 14:  <span class='yaml-String def-String'>last</span>
 15:  <span class='yaml-String def-String'>line</span>
