--- a/hrc/test/valid/yaml-yaml-test-suite/S4JQ-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/S4JQ-0.yaml.html
@@ -3,7 +3,7 @@
  2: <span class='yaml-Comment def-Comment def-Syntax'># Assuming conventional resolution:</span>
  3: <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>12</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
  4: <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='def-NumberDec def-Number'>12</span>
- 5: <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-Error def-Error'>! 12</span>
+ 5: <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-Tag def-OpenTag def-Tag'> </span><span class='def-NumberDec def-Number'>12</span>
  6: 
  7: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
  8: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC</span>
