--- a/hrc/test/valid/yaml-d-yaml-spec/spec-07-13-0.yaml.html
+++ b/hrc/test/valid/yaml-d-yaml-spec/spec-07-13-0.yaml.html
@@ -1,6 +1,6 @@
 ﻿ 0: <span class='yaml-Comment def-Comment def-Syntax'># name = spec-07-13</span>
  1: 
- 2: <span class='yaml-Error def-Error'>! "First document"</span>
+ 2: <span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-Tag def-OpenTag def-Tag'> </span><span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>First document</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
  3: <span class='yaml-DocumentEdge def-Keyword'>---</span>
  4: <span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-Tag def-OpenTag def-Tag'>foo </span><span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>No directives</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
  5: <span class='yaml-Error def-Error'>%TAG ! !foo</span>
