--- a/hrc/test/valid/yaml-d-yaml/undefined-tag-handle-1.yaml.html
+++ b/hrc/test/valid/yaml-d-yaml/undefined-tag-handle-1.yaml.html
@@ -6,6 +6,6 @@
  5: <span class='yaml-Comment def-Comment def-Syntax'># mark2.column = 5</span>
  6: <span class='yaml-Comment def-Comment def-Syntax'># error = While parsing a node, found undefined tag handle: !foo!</span>
  7: 
- 8: <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>anchor </span><span class='yaml-Error def-Error'>!foo!bar</span> <span class='yaml-String def-String'>value</span>
+ 8: <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>anchor </span><span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-Tag def-OpenTag def-Tag'>foo!bar </span><span class='yaml-String def-String'>value</span>
  9: <span class='yaml-Comment def-Comment def-Syntax'># null</span>
 10: 
