--- a/hrc/test/valid/yaml-yaml-test-suite/F2C7-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/F2C7-0.yaml.html
@@ -1,6 +1,6 @@
 ﻿ 0: <span class='yaml-Comment def-Comment def-Syntax'># name = Anchors and Tags</span>
  1: 
- 2:  <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>a </span><span class='yaml-Error def-Error'>!!str</span> <span class='yaml-String def-String'>a</span>
+ 2:  <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>a </span><span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-Tag def-OpenTag def-Tag'>str </span><span class='yaml-String def-String'>a</span>
  3:  <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-Tag def-OpenTag def-Tag'>int </span><span class='def-NumberDec def-Number'>2</span>
  4:  <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-SymbolTag def-Tag'>!</span><span class='yaml-Tag def-OpenTag def-Tag'>int </span><span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>c </span><span class='def-NumberDec def-Number'>4</span>
  5:  <span class='yaml-SymbolSequence def-Symbol'>-</span> <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>d </span><span class='yaml-String def-String'>d</span>
