--- a/hrc/test/valid/yaml-yaml-test-suite/SU74-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/SU74-0.yaml.html
@@ -2,7 +2,7 @@
  1: <span class='yaml-Comment def-Comment def-Syntax'># fail = true</span>
  2: 
  3: <span class='yaml-MappingKey def-Parameter'>key1</span><span class='yaml-SymbolMapping def-SymbolStrong def-Symbol'>:</span> <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>alias </span><span class='yaml-String def-String'>value1</span>
- 4: <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>b </span><span class='yaml-SymbolAnchor def-VarStrong def-Var'>*</span><span class='yaml-Anchor def-Var'>alias </span><span class='yaml-Error def-Error'>: value2</span>
+ 4: <span class='yaml-SymbolAnchor def-VarStrong def-Var'>&amp;</span><span class='yaml-Anchor def-Var'>b </span><span class='yaml-Error def-Error'>*alias</span><span class='yaml-Anchor def-Var'> </span><span class='yaml-Error def-Error'>: value2</span>
  5: 
  6: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
  7: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC</span>
