--- a/hrc/test/valid/yaml-yaml-test-suite/UKK6-2.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/UKK6-2.yaml.html
@@ -1,6 +1,6 @@
 ﻿ 0: <span class='yaml-Comment def-Comment def-Syntax'># name = Syntax character edge cases</span>
  1: 
- 2: <span class='yaml-Error def-Error'>!</span>
+ 2: <span class='yaml-SymbolTag def-Tag'>!</span>
  3: 
  4: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
  5: <span class='yaml-Comment def-Comment def-Syntax'>#  +DOC</span>
